--- a/tarefa/static/tarefa/css/styleTarefas.css
+++ b/tarefa/static/tarefa/css/styleTarefas.css
@@ -1,9 +1,31 @@
 
-
-.container{
-    background-color: antiquewhite;
+* {
+    list-style-type: none;
+    padding: 0;
+    margin: 0;
+    box-sizing: border-box;
 }
 
-.teste{
-    font-size: 50px;
+body {
+    height: 100vh;
+    width: 100vw;
+    overflow: hidden;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
 }
+
+.container {
+    background-color: honeydew;
+    border-radius: 5px;
+    padding-bottom: 1rem;
+}
+
+.faixaMain{
+    padding: 20px;
+    display: flex;
+    justify-content: space-between;
+    gap: 1rem;
+}
+
