--- a/tarefa/templates/index.html
+++ b/tarefa/templates/index.html
@@ -9,13 +9,115 @@
     <link rel="stylesheet" type="text/css" href="{% static 'tarefa/css/styleTarefas.css' %}"/>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet"
           integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
+   <script src="https://kit.fontawesome.com/2da1d399c4.js" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"></script>
     <link href="https://getbootstrap.com/docs/5.2/assets/css/docs.css" rel="stylesheet">
 </head>
-<body>
+<body style="background-color:#1b676b;">
 
+<div class="container faixaMain">
+    <div>
+        <h4><i class="fa-solid fa-clipboard-list"></i> Agenda</h4>
+    </div>
+
+    <div>
+    <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#add_Tarefa">
+       <i class="fa-regular fa-plus"></i> Adicionar Tarefa
+    </button>
+    <a class="btn btn-danger " href="{% url 'sair' %}"> Sair <i class="fa-solid fa-arrow-right-from-bracket"></i></a>
+        </div>
+</div>
+<br>
 <div class="container">
 
+    <br>
+    {% if erro == '1' %}
+        <div class="alert alert-danger" role="alert">
+            Erro no sistema, contate um administrador!
+        </div>
+    {% elif erro == '2' %}
+        <div class="alert alert-danger" role="alert">
+            Tarefa invalida!
+        </div>
+    {% elif erro == '3' %}
+        <div class="alert alert-danger" role="alert">
+            Exite um conflito de horário na data informada!
+        </div>
+    {% elif erro == '4' %}
+        <div class="alert alert-danger" role="alert">
+            Essa data já passou, insira outra!
+        </div>
+    {% elif erro == '5' %}
+        <div class="alert alert-danger" role="alert">
+            Horário invalido!
+        </div>
+    {% elif erro == '6' %}
+        <div class="alert alert-danger" role="alert">
+            Preencha todos os campos!
+        </div>
+    {% elif erro == '7' %}
+        <div class="alert alert-danger" role="alert">
+            Preencha uma data para consultar a hora!
+        </div>
+
+    {% elif erro == '8' %}
+        <div class="alert alert-danger" role="alert">
+            Nenhuma tarefa encontrada!
+        </div>
+    {% endif %}
+    <form class="row g-4" method="POST" action="{% url 'filtrar_Tarefa' %}">
+        {% csrf_token %}
+        <div class="col-md-2">
+            <label class="form-label">Status compromisso</label>
+            <select required name="status_compromisso" class="form-select"
+                    id="inputGroupSelect01">
+                <option selected disabled>------</option>
+                <option value="agendado">Agendado</option>
+                <option value="realizado">Realizado</option>
+                <option value="cancelado">Cancelado</option>
+            </select>
+        </div>
+        <div class="col-md-2">
+            <label class="form-label">Nome do compromisso:</label>
+            <input name="nome_compromisso" class="form-control" type="text" placeholder="Nome do compromisso"
+                   aria-label="default input example">
+        </div>
+        <div class="col-md-2">
+            <label class="form-label">Local:</label>
+            <input name="local_compromisso" class="form-control" type="text" placeholder="Local"
+                   aria-label="default input example">
+        </div>
+        <div class="col-md-2">
+            <label class="form-label">Observações:</label>
+            <input name="observacoes" class="form-control" type="text" placeholder="Observações"
+                   aria-label="default input example">
+        </div>
+        <div class="col-md-2">
+            <label class="form-label">Data do compromisso:</label>
+            <input name="data_compromisso" type="date" class="form-control"
+                   aria-label="Small"
+                   aria-describedby="inputGroup-sizing-sm"
+            >
+        </div>
+        <div class="col-md-2">
+            <label class="form-label">Hora inicio:</label>
+            <input name="hora_inicio" type="time" class="form-control" aria-label="Small"
+                   aria-describedby="inputGroup-sizing-sm"
+            >
+        </div>
+        <div class="col-md-2">
+            <label class="form-label">Hora fim:</label>
+            <input name="hora_fim" type="time" class="form-control" aria-label="Small"
+                   aria-describedby="inputGroup-sizing-sm"
+            >
+        </div>
+        <div class="col-md-3">
+            <br>
+            <button class="btn btn-primary " type="submit"><i class="fa-solid fa-filter"></i> Filtrar</button>
+            <a class="btn btn-info" href="/tarefa/index/"><i class="fa-solid fa-list"></i> Listar todos</a>
+        </div>
+    </form>
+    <br>
     <table class="table table-striped table-hover table-bordered">
         <thead>
         <tr>
@@ -30,32 +132,9 @@
         </tr>
         </thead>
         <tbody>
-        {% if erro == '1' %}
-            <div class="alert alert-danger" role="alert">
-                Erro no sistema, contate um administrador!
-            </div>
-        {% elif erro == '2' %}
-            <div class="alert alert-danger" role="alert">
-                Tarefa invalida!
-            </div>
-        {% elif erro == '3' %}
-            <div class="alert alert-danger" role="alert">
-                Exite um conflito de horário na data informada!
-            </div>
-        {% elif erro == '4' %}
-            <div class="alert alert-danger" role="alert">
-                Essa data já passou, insira outra!
-            </div>
-        {% elif erro == '5' %}
-            <div class="alert alert-danger" role="alert">
-                Horário invalido!
-            </div>
-        {% elif erro == '6' %}
-            <div class="alert alert-danger" role="alert">
-                Preencha todos os campos!
-            </div>
-        {% endif %}
-        <div class="modal fade" id="add_Tarefa" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+
+        <div class="modal fade" id="add_Tarefa" tabindex="-1" aria-labelledby="exampleModalLabel"
+             aria-hidden="true">
             <div class="modal-dialog" role="document">
                 <div class="modal-content">
                     <div class="modal-header">
@@ -83,9 +162,7 @@
                                 <select required name="status_compromisso" class="custom-select"
                                         id="inputGroupSelect01">
 
-                                    <option selected
-                                            value="agendado">Agendado
-                                    </option>
+                                    <option selected value="agendado">Agendado</option>
                                     <option value="realizado">Realizado</option>
                                     <option value="cancelado">Cancelado</option>
                                 </select>
@@ -130,7 +207,7 @@
                                     <span class="input-group-text" id="inputGroup-sizing-sm">Observações</span>
                                 </div>
                                 <input name="observacoes" type="text" class="form-control" aria-label="Small"
-                                       aria-describedby="inputGroup-sizing-sm" required
+                                       aria-describedby="inputGroup-sizing-sm"
                                 >
                             </div>
                             <div class="modal-footer">
@@ -163,7 +240,8 @@
                                     <input hidden name="id_compromisso" type="text" value="{{ tarefa.id }}">
                                     <div class="input-group input-group-sm mb-3">
                                         <div class="input-group-prepend">
-                                            <span class="input-group-text" id="inputGroup-sizing-sm">Compromisso</span>
+                                                <span class="input-group-text"
+                                                      id="inputGroup-sizing-sm">Compromisso</span>
                                         </div>
                                         <input name="nome_compromisso" type="text" class="form-control"
                                                aria-label="Small"
@@ -174,7 +252,8 @@
                                         <div class="input-group-prepend">
                                             <label class="input-group-text" for="inputGroupSelect01">Status</label>
                                         </div>
-                                        <select name="status_compromisso" class="custom-select" id="inputGroupSelect01"
+                                        <select name="status_compromisso" class="custom-select"
+                                                id="inputGroupSelect01"
                                                 required>
                                             {% if tarefa.status_compromisso.lower == 'agendado' %}
                                                 <option selected
@@ -205,9 +284,11 @@
                                     </div>
                                     <div class="input-group input-group-sm mb-3">
                                         <div class="input-group-prepend">
-                                            <span class="input-group-text" id="inputGroup-sizing-sm">Hora inicio:</span>
+                                                <span class="input-group-text"
+                                                      id="inputGroup-sizing-sm">Hora inicio:</span>
                                         </div>
-                                        <input name="hora_inicio" type="time" class="form-control" aria-label="Small"
+                                        <input name="hora_inicio" type="time" class="form-control"
+                                               aria-label="Small"
                                                aria-describedby="inputGroup-sizing-sm"
                                                value="{{ tarefa.hora_inicio }}" required>
                                     </div>
@@ -231,14 +312,17 @@
                                     </div>
                                     <div class="input-group input-group-sm mb-3">
                                         <div class="input-group-prepend">
-                                            <span class="input-group-text" id="inputGroup-sizing-sm">Observações</span>
+                                                <span class="input-group-text"
+                                                      id="inputGroup-sizing-sm">Observações</span>
                                         </div>
-                                        <input name="observacoes" type="text" class="form-control" aria-label="Small"
+                                        <input name="observacoes" type="text" class="form-control"
+                                               aria-label="Small"
                                                aria-describedby="inputGroup-sizing-sm"
-                                               value="{{ tarefa.observacoes }}" required>
+                                               value="{{ tarefa.observacoes }}">
                                     </div>
                                     <div class="modal-footer">
-                                        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Fechar
+                                        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">
+                                            Fechar
                                         </button>
                                         <button type="submit" class="btn btn-primary">Editar</button>
 
@@ -283,12 +367,12 @@
                     <td>
                         <button type="button" class="btn btn-info btn-sm" data-bs-toggle="modal"
                                 data-bs-target="#edit{{ tarefa.id }}">
-                            Editar
+                           <i class="fa-solid fa-pen-to-square"></i> Editar
                         </button>
 
                         <button type="button" class="btn btn-danger btn-sm" data-bs-toggle="modal"
                                 data-bs-target="#del{{ tarefa.id }}">
-                            Apagar
+                           <i class="fa-solid fa-trash-can"></i> Apagar
                         </button>
                     </td>
                 </div>
@@ -297,11 +381,12 @@
         </tbody>
     </table>
 
-    <a class="btn btn-danger btn-lg" href="{% url 'sair' %}"> Sair</a>
-    <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#add_Tarefa">
-        Adicionar Tarefa
-    </button>
+    {#        <a class="btn btn-danger " href="{% url 'sair' %}"> Sair</a>#}
+    {#        <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#add_Tarefa">#}
+    {#            Adicionar Tarefa#}
+    {#        </button>#}
 </div>
+
 <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.5/dist/umd/popper.min.js"
         integrity="sha384-Xe+8cL9oJa6tN/veChSP7q+mnSPaj5Bcu9mPX5F5xIGE0DVittaqT5lorf0EI7Vk"
         crossorigin="anonymous"></script>
