--- a/usuarios/static/usuarios/css/styleUsuarioCadastro.css
+++ b/usuarios/static/usuarios/css/styleUsuarioCadastro.css
@@ -1,3 +1,30 @@
-.container{
-    background-color: beige;
+* {
+    list-style-type: none;
+    padding: 0;
+    margin: 0;
+}
+
+body {
+    height: 100vh;
+    width: 100vw;
+    overflow: hidden;
+}
+
+.conteudo {
+    display: inline-flex;
+    background-color:lightpink;
+    height: 100%;
+    justify-content: flex-end;
+}
+
+.alert-danger{
+    height: 4.5rem;
+}
+
+.mainContent {
+    background-color: honeydew;
+    display: flex;
+    flex-direction: column;
+    justify-items: flex-start;
+    padding-top: 5rem;
 }
