--- a/usuarios/templates/login.html
+++ b/usuarios/templates/login.html
@@ -8,42 +8,49 @@
     <link rel="stylesheet" type="text/css" href="{% static 'usuarios/css/styleUsuario.css' %}"/>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet"
           integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
-          
+    <script src="https://kit.fontawesome.com/2da1d399c4.js" crossorigin="anonymous"></script>
+
 </head>
 <body>
-<div class="container">
-    <br>
-    {% if status == '1' %}
-        <div class="alert alert-danger" role="alert">
-            Senha incorreta!
+<div class="container-fluid">
+    <div class="row">
+        <div class="conteudo col-sm">
+            <img src="{% static 'usuarios/imgs/bg.png' %}">
         </div>
-    {% elif status == '2' %}
-        <div class="alert alert-danger" role="alert">
-            Erro no sistema!
+        <div class="mainContent col-sm">
+            {% if status == '1' %}
+                <div class="alert alert-danger" role="alert">
+                    Senha incorreta!
+                </div>
+            {% elif status == '2' %}
+                <div class="alert alert-danger" role="alert">
+                    Erro no sistema!
+                </div>
+            {% elif status == '3' %}
+                <div class="alert alert-danger" role="alert">
+                    Faça login primeiro!
+                </div>
+            {% elif status == '4' %}
+                <div class="alert alert-success" role="alert">
+                    Deslogado com sucesso!
+                </div>
+            {% elif status == '5' %}
+                <div class="alert alert-danger" role="alert">
+                    Email não cadastrado no sistema!
+                </div>
+            {% endif %}
+            <form method="POST" action="{% url 'valida_login' %}">{% csrf_token %}
+
+                <label>Email:</label>
+                <input name="email" class="form-control" type="text" placeholder="Digite seu email">
+                <label>Senha:</label>
+                <input name="senha" class="form-control" type="password" placeholder="Digite sua senha">
+                <br>
+                <button class="btn btn-success" type="submit">Entrar <i class="fa-solid fa-right-to-bracket"></i></button>
+                <a class="btn btn-warning" href="{% url 'cadastro' %}">Cadastro <i class="fa-solid fa-user-plus"></i></a>
+            </form>
         </div>
-    {% elif status == '3' %}
-        <div class="alert alert-danger" role="alert">
-            Faça login primeiro!
-        </div>
-    {% elif status == '4' %}
-        <div class="alert alert-success" role="alert">
-            Deslogado com sucesso!
-        </div>
-    {% elif status == '5' %}
-        <div class="alert alert-danger" role="alert">
-            Email não cadastrado no sistema!
-        </div>
-    {% endif %}
-    <br>
-    <form method="POST" action="{% url 'valida_login' %}">{% csrf_token %}
-        <label>Email:</label>
-        <input name="email" class="form-control" type="text" placeholder="Digite seu email">
-        <label>Senha:</label>
-        <input name="senha" class="form-control" type="password" placeholder="Digite sua senha">
-        <br>
-        <input class="btn btn-success" type="submit" value="Entrar">
-        <a class="btn btn-warning" href="{% url 'cadastro' %}"> Cadastrar </a>
-    </form>
+    </div>
 </div>
 </body>
 </html>
